# djangogirls_tutorial

./: .env  manage.py  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/static/css/: blog.css
blog/templates/blog/: base.html  post_detail.html  post_edit.html  post_list.html
tuto_djgirls/: asgi.py  settings.py  urls.py  wsgi.py
